Added more Tetris Blocks

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=Grüner Pilzblock
 tile.yellow_mushroom_block.name=Gelber Pilzblock
 tile.purple_mushroom_block.name=Lila Pilzblock
 
-tile.blue_tetris_block.name=Blauer Tetris-Block
-tile.light_blue_tetris_block.name=Leuchtenderblauer Tetris-Block
-tile.green_tetris_block.name=Grüner Tetris-Block
-tile.yellow_tetris_block.name=Gelber Tetris-Block
-tile.orange_tetris_block.name=Orangefarbener Tetris-Block
-tile.red_tetris_block.name=Roter Tetris-Block
-tile.pink_tetris_block.name=Rosa Tetris-Block
-tile.gray_tetris_block.name=Grauer Tetris-Block
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=Tetris-Glas
 tile.japanese_tetris_cushion.name=Japanischer Tetris-Kissen
 tile.rainbow_tetris_scaffolding.name=Regenbogen Tetris-Gerüst
