--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=Green Mushroom Block
 tile.yellow_mushroom_block.name=Yellow Mushroom Block
 tile.purple_mushroom_block.name=Purple Mushroom Block
 
-tile.blue_tetris_block.name=Blue Tetris Block
-tile.light_blue_tetris_block.name=Light Blue Tetris Block
-tile.green_tetris_block.name=Green Tetris Block
-tile.yellow_tetris_block.name=Yellow Tetris Block
-tile.orange_tetris_block.name=Orange Tetris Block
-tile.red_tetris_block.name=Red Tetris Block
-tile.pink_tetris_block.name=Pink Tetris Block
-tile.gray_tetris_block.name=Grey Tetris Block
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=Tetris Glass
 tile.japanese_tetris_cushion.name=Japanese Tetris Cushion
 tile.rainbow_tetris_scaffolding.name=Rainbow Tetris Scaffolding
