--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW uǝǝɹפ
 tile.yellow_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW ʍollǝ⅄
 tile.purple_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW ǝldɹnԀ
 
-tile.blue_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ǝnlᗺ
-tile.light_blue_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ǝnlᗺ ʇɥƃᴉ˥
-tile.green_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ uǝǝɹפ
-tile.yellow_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʍollǝ⅄
-tile.orange_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ǝƃuɐɹO
-tile.red_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ pǝᴚ
-tile.pink_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʞuᴉԀ
-tile.gray_tetris_block.name=ʞɔolᗺ sᴉɹʇǝ┴ ʎɐɹפ
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=ssɐlפ sᴉɹʇǝ┴
 tile.japanese_tetris_cushion.name=uoᴉɥsnƆ sᴉɹʇǝ┴ ǝsǝuɐdɐſ
 tile.rainbow_tetris_scaffolding.name=ƃuᴉploɟɟɐɔS sᴉɹʇǝ┴ ʍoquᴉɐɹ
