--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -52,12 +52,20 @@ tile.purple_mushroom_block.name=Purple Mushroom Block
 
 tile.blue_tetris_block.name=Blue Tetris Block
 tile.light_blue_tetris_block.name=Light Blue Tetris Block
+tile.cyan_tetris_block.name=Cyan Tetris Block
 tile.green_tetris_block.name=Green Tetris Block
+tile.lime_tetris_block.name=Lime Tetris Block
 tile.yellow_tetris_block.name=Yellow Tetris Block
 tile.orange_tetris_block.name=Orange Tetris Block
 tile.red_tetris_block.name=Red Tetris Block
 tile.pink_tetris_block.name=Pink Tetris Block
+tile.magenta_tetris_block.name=Magenta Tetris Block
+tile.purple_tetris_block.name=Purple Tetris Block
+tile.brown_tetris_block.name=Brown Tetris Block
+tile.white_tetris_block.name=White Tetris Block
+tile.light_gray_tetris_block.name=Light Gray Tetris Block
 tile.gray_tetris_block.name=Gray Tetris Block
+tile.black_tetris_block.name=Black Tetris Block
 tile.tetris_glass.name=Tetris Glass
 tile.japanese_tetris_cushion.name=Japanese Tetris Cushion
 tile.rainbow_tetris_scaffolding.name=Rainbow Tetris Scaffolding
