--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=Bloque de champiñón verde
 tile.yellow_mushroom_block.name=Bloque de champiñón amarillo
 tile.purple_mushroom_block.name=Bloque de champiñón púrpura
 
-tile.blue_tetris_block.name=Bloque Tetris azul
-tile.light_blue_tetris_block.name=Bloque Tetris azul claro
-tile.green_tetris_block.name=Bloque Tetris verde
-tile.yellow_tetris_block.name=Bloque Tetris amarillo
-tile.orange_tetris_block.name=Bloque Tetris naranja
-tile.red_tetris_block.name=Bloque Tetris rojo
-tile.pink_tetris_block.name=Bloque Tetris rosado
-tile.gray_tetris_block.name=Bloque Tetris gris
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=Bloque Tetris de cristal
 tile.japanese_tetris_cushion.name=Cojín Tetris japonés
 tile.rainbow_tetris_scaffolding.name=Andamio Tetris arco iris
