--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=bloc jampinon ver
 tile.yellow_mushroom_block.name=bloc jampinon jon
 tile.purple_mushroom_block.name=bloc jampinon violet
 
-tile.blue_tetris_block.name=blok taitri beul
-tile.light_blue_tetris_block.name=blok titri beul cler
-tile.green_tetris_block.name=bloc taitri ver cool
-tile.yellow_tetris_block.name=bloc tirti jon
-tile.orange_tetris_block.name=blok taitri ranj
-tile.red_tetris_block.name=blok tetri rouj
-tile.pink_tetris_block.name=blok taitri roz
-tile.gray_tetris_block.name=bloc taitri grise
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=ver titri
 tile.japanese_tetris_cushion.name=cousin CHINOIIS:!$ ahahha (tetri)
 tile.rainbow_tetris_scaffolding.name=shafaudaj tirtris ARC EN CIELLLLL!! tro bo lai arc en cie
