--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=Bloc de champignon vert
 tile.yellow_mushroom_block.name=Bloc de champignon jaune
 tile.purple_mushroom_block.name=Bloc de champignon violet
 
-tile.blue_tetris_block.name=Bloc Tetris bleu
-tile.light_blue_tetris_block.name=Bloc Tetris bleu clair
-tile.green_tetris_block.name=Bloc Tetris vert
-tile.yellow_tetris_block.name=Bloc Tetris jaune
-tile.orange_tetris_block.name=Bloc Tetris orange
-tile.red_tetris_block.name=Bloc Tetris rouge
-tile.pink_tetris_block.name=Bloc Tetris rose
-tile.gray_tetris_block.name=Bloc Tetris gris
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=Verre Tetris
 tile.japanese_tetris_cushion.name=Coussin Tetris japonais
 tile.rainbow_tetris_scaffolding.name=Échafaudage Tetris multicolore
