--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=gren mush blok
 tile.yellow_mushroom_block.name=yolo mush blok
 tile.purple_mushroom_block.name=purpl mush blok
 
-tile.blue_tetris_block.name=cool blu tetri
-tile.blue_tetris_block.name=cool lit bloo tetri
-tile.green_tetris_block.name=cool gren tetri
-tile.yellow_tetris_block.name=cool yeule tetri
-tile.orange_tetris_block.name=cool oranj tetri
-tile.red_tetris_block.name=cool blood tetri
-tile.pink_tetris_block.name=cool pik tetri
-tile.gray_tetris_block.name=cool gree tetri
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=tetri glazz
 tile.japanese_tetris_cushion.name=jaPAN tetri sleep
 tile.rainbow_tetris_scaffolding.name=varicolordd tetri zcffolding
