--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=Groen paddenstoelenblok
 tile.yellow_mushroom_block.name=Geel paddenstoelenblok
 tile.purple_mushroom_block.name=Paars paddenstoelenblok
 
-tile.blue_tetris_block.name=Blauw Tetris blok
-tile.light_blue_tetris_block.name=Lichtblauw Tetris blok
-tile.green_tetris_block.name=Groen Tetris blok
-tile.yellow_tetris_block.name=Geel Tetris blok
-tile.orange_tetris_block.name=Oranje Tetris blok
-tile.red_tetris_block.name=Rood Tetris blok
-tile.pink_tetris_block.name=Roze Tetris blok
-tile.gray_tetris_block.name=Grijs Tetris blok
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=Tetris glas
 tile.japanese_tetris_cushion.name=Japans Tetris kussen
 tile.rainbow_tetris_scaffolding.name=Regenboog Tetris steiger
