--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=綠色蘑菇方塊
 tile.yellow_mushroom_block.name=黃色蘑菇方塊
 tile.purple_mushroom_block.name=紫色蘑菇方塊
 
-tile.blue_tetris_block.name=藍色俄羅斯方塊
-tile.light_blue_tetris_block.name=淡藍色俄羅斯方塊
-tile.green_tetris_block.name=綠色俄羅斯方塊
-tile.yellow_tetris_block.name=黃色俄羅斯方塊
-tile.orange_tetris_block.name=橙色俄羅斯方塊
-tile.red_tetris_block.name=紅色俄羅斯方塊
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
 //tile.pink_tetris_block.name=<newline>
-tile.gray_tetris_block.name=灰色俄羅斯方塊
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=俄羅斯方塊玻璃
 tile.japanese_tetris_cushion.name=日式俄羅斯方塊坐墊
 tile.rainbow_tetris_scaffolding.name=彩虹俄羅斯方塊腳手架
