--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -50,14 +50,22 @@ tile.green_mushroom_block.name=绿色蘑菇方块
 tile.yellow_mushroom_block.name=黄色蘑菇方块
 tile.purple_mushroom_block.name=紫色蘑菇方块
 
-tile.blue_tetris_block.name=蓝色俄罗斯方块
-tile.light_blue_tetris_block.name=淡蓝色俄罗斯方块
-tile.green_tetris_block.name=绿色俄罗斯方块
-tile.yellow_tetris_block.name=黄色俄罗斯方块
-tile.orange_tetris_block.name=橙色俄罗斯方块
-tile.red_tetris_block.name=红色俄罗斯方块
-tile.pink_tetris_block.name=粉色俄罗斯方块
-tile.gray_tetris_block.name=灰色俄罗斯方块
+//tile.blue_tetris_block.name=<newline>
+//tile.light_blue_tetris_block.name=<newline>
+//tile.cyan_tetris_block.name=<newline>
+//tile.green_tetris_block.name=<newline>
+//tile.lime_tetris_block.name=<newline>
+//tile.yellow_tetris_block.name=<newline>
+//tile.orange_tetris_block.name=<newline>
+//tile.red_tetris_block.name=<newline>
+//tile.pink_tetris_block.name=<newline>
+//tile.magenta_tetris_block.name=<newline>
+//tile.purple_tetris_block.name=<newline>
+//tile.brown_tetris_block.name=<newline>
+//tile.white_tetris_block.name=<newline>
+//tile.light_gray_tetris_block.name=<newline>
+//tile.gray_tetris_block.name=<newline>
+//tile.black_tetris_block.name=<newline>
 tile.tetris_glass.name=俄罗斯方块玻璃
 tile.japanese_tetris_cushion.name=日式俄罗斯方块坐垫
 tile.rainbow_tetris_scaffolding.name=彩虹俄罗斯方块脚手架
