--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -7,26 +7,26 @@ itemGroup.mubble_costumes_tab=Costumes Mubble
 tile.vanadium_block.name=Bloc de vanadium
 tile.vanadium_ore.name=Minerai de vanadium
 tile.red_bricks.name=Briques rouges
-//tile.red_brick_stairs.name=<newline>
+tile.red_brick_stairs.name=Escaliers en brique rouge
 tile.white_bricks.name=Briques blanches
-//tile.white_brick_stairs.name=<newline>
+tile.white_brick_stairs.name=Escaliers en brique blanche
 tile.blunite.name=Blunite
-//tile.blunite_stairs.name=<newline>
-//tile.blunite_wall.name=<newline>
+tile.blunite_stairs.name=Escaliers en blunite
+tile.blunite_wall.name=Muret en blunite
 tile.polished_blunite.name=Blunite poli
-//tile.polished_blunite_stairs.name=<newline>
+tile.polished_blunite_stairs.name=Escaliers en blunite poli
 tile.carbonite.name=Carbonite
-//tile.carbonite_stairs.name=<newline>
-//tile.carbonite_wall.name=<newline>
+tile.carbonite_stairs.name=Escaliers en carbonite
+tile.carbonite_wall.name=Muret en carbonite
 tile.polished_carbonite.name=Carbonite polie
-//tile.polished_carbonite_stairs.name=<newline>
+tile.polished_carbonite_stairs.name=Escaliers en carbonite poli
 tile.footblock.name=Bloc de foot
-//tile.white_cloud_block.name=<newline>
-//tile.light_gray_cloud_block.name=<newline>
-//tile.gray_cloud_block.name=<newline>
-//tile.black_cloud_block.name=<newline>
-//tile.tomato.name=<newline>
-//tile.salad.name=<newline>
+tile.white_cloud_block.name=Bloc de nuage blanc
+tile.light_gray_cloud_block.name=Bloc de nuage gris clair
+tile.gray_cloud_block.name=Bloc de nuage gris
+tile.black_cloud_block.name=Bloc de nuage noir
+tile.tomato.name=Tomate
+tile.salad.name=Salade
 
 tile.question_block.name=Bloc ?
 tile.empty_block.name=Bloc vide
@@ -50,22 +50,22 @@ tile.green_mushroom_block.name=Bloc de champignon vert
 tile.yellow_mushroom_block.name=Bloc de champignon jaune
 tile.purple_mushroom_block.name=Bloc de champignon violet
 
-//tile.blue_tetris_block.name=<newline>
-//tile.light_blue_tetris_block.name=<newline>
-//tile.cyan_tetris_block.name=<newline>
-//tile.green_tetris_block.name=<newline>
-//tile.lime_tetris_block.name=<newline>
-//tile.yellow_tetris_block.name=<newline>
-//tile.orange_tetris_block.name=<newline>
-//tile.red_tetris_block.name=<newline>
-//tile.pink_tetris_block.name=<newline>
-//tile.magenta_tetris_block.name=<newline>
-//tile.purple_tetris_block.name=<newline>
-//tile.brown_tetris_block.name=<newline>
-//tile.white_tetris_block.name=<newline>
-//tile.light_gray_tetris_block.name=<newline>
-//tile.gray_tetris_block.name=<newline>
-//tile.black_tetris_block.name=<newline>
+tile.blue_tetris_block.name=Bloc Tetris bleu
+tile.light_blue_tetris_block.name=Bloc Tetris bleu clair
+tile.cyan_tetris_block.name=Bloc Tetris cyan
+tile.green_tetris_block.name=Bloc Tetris vert
+tile.lime_tetris_block.name=Bloc Tetris vert clair
+tile.yellow_tetris_block.name=Bloc Tetris jaune
+tile.orange_tetris_block.name=Bloc Tetris orange
+tile.red_tetris_block.name=Bloc Tetris rouge
+tile.pink_tetris_block.name=Bloc Tetris rose
+tile.magenta_tetris_block.name=Bloc Tetris magenta
+tile.purple_tetris_block.name=Bloc Tetris violet
+tile.brown_tetris_block.name=Bloc Tetris marron
+tile.white_tetris_block.name=Bloc Tetris blanc
+tile.light_gray_tetris_block.name=Bloc Tetris gris clair
+tile.gray_tetris_block.name=Bloc Tetris gris
+tile.black_tetris_block.name=Bloc Tetris noir
 tile.tetris_glass.name=Verre Tetris
 tile.japanese_tetris_cushion.name=Coussin Tetris japonais
 tile.rainbow_tetris_scaffolding.name=Échafaudage Tetris multicolore
@@ -74,35 +74,35 @@ tile.monochrome_tetris_scaffolding.name=Échafaudage Tetris monochrome
 tile.vampire_stone.name=Roche Vampire
 tile.medusa_stone.name=Roche de Méduse
 tile.medusa_bricks.name=Briques de Méduse
-//tile.medusa_brick_stairs.name=<newline>
-tile.blue_candy_cane_pillar.name=Piller de sucre d'orge bleu
-//tile.light_blue_candy_cane_pillar.name=<newline>
-//tile.cyan_candy_cane_pillar.name=<newline>
-tile.green_candy_cane_pillar.name=Piller de sucre d'orge vert
-//tile.lime_candy_cane_pillar.name=<newline>
-tile.yellow_candy_cane_pillar.name=Piller de sucre d'orge jaune
-//tile.orange_candy_cane_pillar.name=<newline>
-tile.red_candy_cane_pillar.name=Piller de sucre d'orge rouge
-//tile.pink_candy_cane_pillar.name=<newline>
-//tile.magenta_candy_cane_pillar.name=<newline>
-tile.purple_candy_cane_pillar.name=Piller de sucre d'orge violet
-//tile.brown_candy_cane_pillar.name=<newline>
-//tile.white_candy_cane_pillar.name=<newline>
-//tile.light_gray_candy_cane_pillar.name=<newline>
-//tile.gray_candy_cane_pillar.name=<newline>
-//tile.black_candy_cane_pillar.name=<newline>
+tile.medusa_brick_stairs.name=Escaliers en brique de Méduse
+tile.blue_candy_cane_pillar.name=Pilier de sucre d'orge bleu
+tile.light_blue_candy_cane_pillar.name=Pilier de sucre d'orge bleu clair
+tile.cyan_candy_cane_pillar.name=Pilier de sucre d'orge cyan
+tile.green_candy_cane_pillar.name=Pilier de sucre d'orge vert
+tile.lime_candy_cane_pillar.name=Pilier de sucre d'orge vert clair
+tile.yellow_candy_cane_pillar.name=Pilier de sucre d'orge jaune
+tile.orange_candy_cane_pillar.name=Pilier de sucre d'orge orange
+tile.red_candy_cane_pillar.name=Pilier de sucre d'orge rouge
+tile.pink_candy_cane_pillar.name=Pilier de sucre d'orge rose
+tile.magenta_candy_cane_pillar.name=Pilier de sucre d'orge magenta
+tile.purple_candy_cane_pillar.name=Pilier de sucre d'orge violet
+tile.brown_candy_cane_pillar.name=Pilier de sucre d'orge marron
+tile.white_candy_cane_pillar.name=Pilier de sucre d'orge blanc
+tile.light_gray_candy_cane_pillar.name=Pilier de sucre d'orge gris clair
+tile.gray_candy_cane_pillar.name=Pilier de sucre d'orge gris
+tile.black_candy_cane_pillar.name=Pilier de sucre d'orge noir
 
-//tile.yellow_studiopolis_clapper.name=<newline>
-//tile.blue_studiopolis_clapper.name=<newline>
+tile.yellow_studiopolis_clapper.name=Clap jaune de Studiopolis
+tile.blue_studiopolis_clapper.name=Clap bleu de Studiopolis
 
-//tile.scarlet_mushroom.name=<newline>
-//tile.scarlet_orchid.name=<newline>
+tile.scarlet_mushroom.name=Champignon écarlate
+tile.scarlet_orchid.name=Orchidée écarlate
 
 tile.iron_scaffolding.name=Échafaudage en fer
 tile.purple_bricks.name=Briques violettes
-//tile.purple_brick_stairs.name=<newline>
-tile.cyan_bricks.name=Briques cyan
-//tile.cyan_brick_stairs.name=<newline>
+tile.purple_brick_stairs.name=Escaliers en brique violette
+tile.cyan_bricks.name=Briques cyans
+tile.cyan_brick_stairs.name=Escaliers en brique cyan
 tile.elder_pebbles.name=Anciens galets
 tile.space_matter.name=Matière spatiale
 
@@ -118,9 +118,9 @@ item.chocolate_crepe.name=Crêpe au chocolat
 item.caramel_crepe.name=Crêpe au caramel
 item.candy_cane.name=Sucre d'orge
 item.burger.name=Burger
-//item.tomato.name=<newline>
-//item.salad.name=<newline>
-//item.cheese.name=<newline>
+item.tomato.name=Tomato
+item.salad.name=Salade
+item.cheese.name=Fromage
 
 item.super_mushroom.name=Super champignon
 item.peach.name=Pêche
@@ -140,16 +140,16 @@ item.princess_peach_crown.name=Couronne de la Princesse Peach
 item.princess_daisy_crown.name=Couronne de la Princesse Daisy
 item.pink_gold_peach_crown.name=Couronne de Peach d'or rose
 item.super_crown.name=Super couronne
-//item.rosalina_crown.name=<newline>
-//item.broque_monsieur_head.name=<newline>
+item.rosalina_crown.name=Couronne d'Harmonie
+item.broque_monsieur_head.name=Tête de Charlie Bloc
 
 item.bandana.name=Bandana
 
-//item.top_hat.name=<newline>
+item.top_hat.name=Haut-de-forme
 
 item.smash_ball.name=Balle Smash
 
-//item.annoying_dog.name=<newline>
+item.annoying_dog.name=Chien Agaçant
 
 item.ralsei_hat.name=Chapeau de Ralsei
 
