--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -12,12 +12,12 @@ tile.white_bricks.name=Witte bakstenen
 tile.white_brick_stairs.name=Witte bakstenen trap
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite trap
-//tile.blunite_wall.name=<newline>
+tile.blunite_wall.name=Blunite muur
 tile.polished_blunite.name=Gepolijst blunite
 tile.polished_blunite_stairs.name=Gepolijst blunite trap
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite trap
-//tile.carbonite_wall.name=<newline>
+tile.carbonite_wall.name=Carbonite muur
 tile.polished_carbonite.name=Gepolijst carbonite
 tile.polished_carbonite_stairs.name=Gepolijst carbonite trap
 tile.footblock.name=Voetblok
@@ -25,8 +25,8 @@ tile.white_cloud_block.name=Wittewolkblok
 tile.light_gray_cloud_block.name=Lichtgrijzewolkblok
 tile.gray_cloud_block.name=Grijzewolkblok
 tile.black_cloud_block.name=Zwartewolkblok
-//tile.tomato.name=<newline>
-//tile.salad.name=<newline>
+tile.tomato.name=Tomaten
+tile.salad.name=Salade
 
 tile.question_block.name=?-blok
 tile.empty_block.name=Leeg blok
@@ -50,22 +50,22 @@ tile.green_mushroom_block.name=Groen paddenstoelenblok
 tile.yellow_mushroom_block.name=Geel paddenstoelenblok
 tile.purple_mushroom_block.name=Paars paddenstoelenblok
 
-//tile.blue_tetris_block.name=<newline>
-//tile.light_blue_tetris_block.name=<newline>
-//tile.cyan_tetris_block.name=<newline>
-//tile.green_tetris_block.name=<newline>
-//tile.lime_tetris_block.name=<newline>
-//tile.yellow_tetris_block.name=<newline>
-//tile.orange_tetris_block.name=<newline>
-//tile.red_tetris_block.name=<newline>
-//tile.pink_tetris_block.name=<newline>
-//tile.magenta_tetris_block.name=<newline>
-//tile.purple_tetris_block.name=<newline>
-//tile.brown_tetris_block.name=<newline>
-//tile.white_tetris_block.name=<newline>
-//tile.light_gray_tetris_block.name=<newline>
-//tile.gray_tetris_block.name=<newline>
-//tile.black_tetris_block.name=<newline>
+tile.blue_tetris_block.name=Blauw Tetris blok
+tile.light_blue_tetris_block.name=Lichtblauw Tetris blok
+tile.cyan_tetris_block.name=Turquois Tetris blok
+tile.green_tetris_block.name=Groen Tetris blok
+tile.lime_tetris_block.name=Lichtgroen Tetris blok
+tile.yellow_tetris_block.name=Geel Tetris blok
+tile.orange_tetris_block.name=Oranje Tetris blok
+tile.red_tetris_block.name=Rood Tetris blok
+tile.pink_tetris_block.name=Roze Tetris blok
+tile.magenta_tetris_block.name=Magenta Tetris blok
+tile.purple_tetris_block.name=Paars Tetris blok
+tile.brown_tetris_block.name=Bruin Tetris blok
+tile.white_tetris_block.name=Wit Tetris blok
+tile.light_gray_tetris_block.name=Lichtgrijs Tetris blok
+tile.gray_tetris_block.name=Grijs Tetris blok
+tile.black_tetris_block.name=Zwart Tetris blok
 tile.tetris_glass.name=Tetris glas
 tile.japanese_tetris_cushion.name=Japans Tetris kussen
 tile.rainbow_tetris_scaffolding.name=Regenboog Tetris steiger
@@ -76,27 +76,27 @@ tile.medusa_stone.name=Medusasteen
 tile.medusa_bricks.name=Medusablokstenen
 tile.medusa_brick_stairs.name=Medusablokstenen trap
 tile.blue_candy_cane_pillar.name=Blauwe zuurstokpillaar
-//tile.light_blue_candy_cane_pillar.name=<newline>
-//tile.cyan_candy_cane_pillar.name=<newline>
+tile.light_blue_candy_cane_pillar.name=Lichtblauwe zuurstokpillaar
+tile.cyan_candy_cane_pillar.name=Turquoise zuurstokpillaar
 tile.green_candy_cane_pillar.name=Groene zuurstokpillaar
-//tile.lime_candy_cane_pillar.name=<newline>
+tile.lime_candy_cane_pillar.name=Lichtgroene zuurstokpillaar
 tile.yellow_candy_cane_pillar.name=Gele zuurstokpillaar
-//tile.orange_candy_cane_pillar.name=<newline>
+tile.orange_candy_cane_pillar.name=Oranje zuurstokpillaar
 tile.red_candy_cane_pillar.name=Rode zuurstokpillaar
-//tile.pink_candy_cane_pillar.name=<newline>
-//tile.magenta_candy_cane_pillar.name=<newline>
+tile.pink_candy_cane_pillar.name=Roze zuurstokpillaar
+tile.magenta_candy_cane_pillar.name=Magenta zuurstokpillaar
 tile.purple_candy_cane_pillar.name=Paarse zuurstokpillaar
-//tile.brown_candy_cane_pillar.name=<newline>
-//tile.white_candy_cane_pillar.name=<newline>
-//tile.light_gray_candy_cane_pillar.name=<newline>
-//tile.gray_candy_cane_pillar.name=<newline>
-//tile.black_candy_cane_pillar.name=<newline>
+tile.brown_candy_cane_pillar.name=Bruine zuurstokpillaar
+tile.white_candy_cane_pillar.name=Witte zuurstokpillaar
+tile.light_gray_candy_cane_pillar.name=Lichtgrijze zuurstokpillaar
+tile.gray_candy_cane_pillar.name=Grijze zuurstokpillaar
+tile.black_candy_cane_pillar.name=Zwarte zuurstokpillaar
 
-//tile.yellow_studiopolis_clapper.name=<newline>
-//tile.blue_studiopolis_clapper.name=<newline>
+tile.yellow_studiopolis_clapper.name=Gele studiopolisklepel
+tile.blue_studiopolis_clapper.name=Blauwe studiopolisklepel
 
 tile.scarlet_mushroom.name=Scharlake paddenstoel
-//tile.scarlet_orchid.name=<newline>
+tile.scarlet_orchid.name=Scharlake orchidee
 
 tile.iron_scaffolding.name=IJzersteiger
 tile.purple_bricks.name=Paarse bakstenen
@@ -117,10 +117,10 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Chocolade crêpe
 item.caramel_crepe.name=Karamel crêpe
 item.candy_cane.name=Zuurstok
-//item.burger.name=<newline>
-//item.tomato.name=<newline>
-//item.salad.name=<newline>
-//item.cheese.name=<newline>
+item.burger.name=Burger
+item.tomato.name=Tomaat
+item.salad.name=Salade
+item.cheese.name=Kaas
 
 item.super_mushroom.name=Super paddenstoel
 item.peach.name=Perzik
@@ -140,18 +140,18 @@ item.princess_peach_crown.name=Prinses Peach's kroon
 item.princess_daisy_crown.name=Prinses Daisy's kroon
 item.pink_gold_peach_crown.name=Rozegouden Peach's kroon
 item.super_crown.name=Superkroon
-//item.rosalina_crown.name=<newline>
-//item.broque_monsieur_head.name=<newline>
+item.rosalina_crown.name=Rosaline's kroon
+item.broque_monsieur_head.name=Broque Monsieur's hoofd
 
 item.bandana.name=Bandana
 
-//item.top_hat.name=<newline>
+item.top_hat.name=Hoge hoed
 
 item.smash_ball.name=Smash bal
 
 item.annoying_dog.name=Iritante hond
 
-item.ralsei_hat.name=Ralsei hoed
+item.ralsei_hat.name=Ralsei's hoed
 
 item.headphones.name=Koptelefoon
 item.record_blank.name=Blanke muziekplaat
