--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -27,6 +27,7 @@ tile.gray_cloud_block.name=Grey Cloud Block
 tile.black_cloud_block.name=Black Cloud Block
 //tile.tomato.name=<newline>
 //tile.salad.name=<newline>
+//tile.cheese_block.name=<newline>
 
 tile.question_block.name=? Block
 tile.empty_block.name=Empty Block
