--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -27,6 +27,7 @@ tile.white_cloud_block.name=ʞɔolq pnolƆ ǝʇᴉɥM
 //tile.black_cloud_block.name=<newline>
 //tile.tomato.name=<newline>
 //tile.salad.name=<newline>
+//tile.cheese_block.name=<newline>
 
 tile.question_block.name=ʞɔolᗺ ¿
 tile.empty_block.name=ʞɔolᗺ ʎʇdɯƎ
