--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -27,6 +27,7 @@ tile.footblock.name=blok foutbol
 //tile.black_cloud_block.name=<newline>
 //tile.tomato.name=<newline>
 //tile.salad.name=<newline>
+//tile.cheese_block.name=<newline>
 
 tile.question_block.name=bloc???
 tile.empty_block.name=bloc san rien lol
