--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -27,6 +27,7 @@ tile.footblock.name=futbloc
 //tile.black_cloud_block.name=<newline>
 //tile.tomato.name=<newline>
 //tile.salad.name=<newline>
+//tile.cheese_block.name=<newline>
 
 tile.question_block.name=BLOC ???? BLOOOOOC ?????????????
 tile.empty_block.name=GBJ
