Added Scarlet Grass Block

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -96,6 +96,7 @@ tile.purple_candy_cane_pillar.name=Lila Zuckerstangensäule
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
+//tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
