--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -96,6 +96,7 @@ tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
+//tile.scarlet_grass_block.name=<newline>
 tile.scarlet_mushroom.name=Scarlet Mushroom
 //tile.scarlet_orchid.name=<newline>
 
