--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -96,6 +96,7 @@ tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 tile.yellow_studiopolis_clapper.name=Yellow Studiopolis Clapper
 tile.blue_studiopolis_clapper.name=Blue Studiopolis Clapper
 
+tile.scarlet_grass_block.name=Scarlet Grass Block
 tile.scarlet_mushroom.name=Scarlet Mushroom
 tile.scarlet_orchid.name=Scarlet Orchid
 
