--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -96,6 +96,7 @@ tile.black_candy_cane_pillar.name=Pilier de sucre d'orge noir
 tile.yellow_studiopolis_clapper.name=Clap jaune de Studiopolis
 tile.blue_studiopolis_clapper.name=Clap bleu de Studiopolis
 
+//tile.scarlet_grass_block.name=<newline>
 tile.scarlet_mushroom.name=Champignon écarlate
 tile.scarlet_orchid.name=Orchidée écarlate
 
