--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -96,6 +96,7 @@ tile.purple_candy_cane_pillar.name=Pilar de bastón de caramelo morado
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
+//tile.scarlet_grass_block.name=<newline>
 tile.scarlet_mushroom.name=Champiñón escarlata
 //tile.scarlet_orchid.name=<newline>
 
