--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -96,6 +96,7 @@ tile.purple_candy_cane_pillar.name=piler de bobon de novel sauf que c pourpr
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
+//tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
