--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -96,6 +96,7 @@ tile.black_candy_cane_pillar.name=Zwarte zuurstokpillaar
 tile.yellow_studiopolis_clapper.name=Gele studiopolisklepel
 tile.blue_studiopolis_clapper.name=Blauwe studiopolisklepel
 
+//tile.scarlet_grass_block.name=<newline>
 tile.scarlet_mushroom.name=Scharlake paddenstoel
 tile.scarlet_orchid.name=Scharlake orchidee
 
