--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -96,6 +96,7 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
+//tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
